--- a/style.css
+++ b/style.css
@@ -1,40 +1,41 @@
 /* Basic Style */
-body {
+.page-body {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
 }
 
-.aaa {
+.additional-info {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
 
-.aaa img {
+.additional-info .additional-info-image {
     width: 100%;
 }
 
-.aaa .more_inf {
+.additional-info .additional-info-link {
     font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
 
-  .aaa {
+  .additional-info {
     text-align: center;
   }
 
 }
 
-.centered-main-page-element {
+.page-main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
 
-.task {
+.task-input,
+.task-name {
     width: 56%;
     display: inline-block;
     flex-grow: 1;
@@ -55,11 +56,11 @@ h3 {
 }
 
 input,
-button{
+button {
     outline: none;
 }
 
-button {
+.button {
     background: none;
     border: 0px;
     color: #888;
@@ -69,13 +70,12 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.button:hover {
     color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.heading {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -85,7 +85,7 @@ label[for="new-task"] {
     text-transform: uppercase;
 }
 
-input[type="text"] {
+.task-input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -98,22 +98,22 @@ input[type="text"] {
     color: #888;
 }
 
-input[type="text"]:focus {
+.task-input:focus {
     color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.label-heading {
     display: block;
     margin: 0 0 20px;
 }
 
-input#new-task {
+.task-input#new-task {
     width: 318px;
 }
 
 /* Task list */
-li {
+.task-item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -122,51 +122,51 @@ li {
     align-items: center;
 }
 
-li > * {
+.task-item > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-item > .task-check {
     margin: 0 10px;
 }
 
-li > label {
+.task-item > .task-name {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
 
-li > input[type="text"] {
+.task-item > .task-input {
     width: 226px;
 }
 
-button.delete img {
+.delete-icon {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete-icon:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .task-name {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.task-item .task-input {
     display: none;
 }
 
-ul li.editMode input[type="text"] {
+.task-item.edit-mode .task-input {
     display: inline-block;
     width: 224px;
 }
 
-ul li.editMode label {
+.task-item.edit-mode .task-name {
     display: none;
 }
